Mergedown from trunk (revisions 4985-5201). Second beginning of 1.2 branch.